  - AbstracSentenceListener; improvements in generic types resolving to support
      more advanced use of generics and inheritance.
  - RPMSentence; added missing RPM setter
  - ROTSentence; negative rate of turn values are now allowed. Also, the value
    may now exceed -/+360 degrees.
  - GLLSentence; added support for FAA mode field (NMEA v3.0)
  - Improvements in AIS message parsers
    - added tests for all current message parsers
    - speed, course and heading values now converted in actual double values in
      messages 1-3, 5, 9, 18 and 19.
    - names and call signs are now trimmed in messages 5 and 21
    - fixed six-bit vector indexing bugs in message 5

  Contributions:
  - GST parser by Tero Laitinen (@tlaitinen)
  - AbstractSentenceListener improvements by Axel Uhl (@axeluhl)
  - HTC and HTD parsers by Paweł Kozioł (@pkoziol)
  - AIS validation improvements by Jyrki Jakobsson
  - SentenceReader improvements by Martin Wegner & Michael Skogberg

Version 0.10.0 (2017-06-21)

  - Preliminary support for AIS (Automatic Identification System)
    - Support for VDM and VDO sentences; the NMEA-0183 layer of AIS messages
    - decoding of messages 1, 2, 3, 4, 5, 9, 18, 19, 21 and 24
    - listener intefaces and classes for receiving messages
    - TalkerId enum; added AD, AN, AR, AS, AT, AX an SA to support AIS talkers
    - utility classes for extracted data
  - Support for MHU sentences; relative and absolute humidity with dew point.
  - Support for MMB sentences; barometric pressure.
  - Support for CUR sentences; Water currents information.
  - Support for VWR sentences; Relative wind speed and angle.
  - Support for VWT sentences; True wind speed and angle.
  - Support for GNS sentences; GNSS fix data.
  - SentenceReader performance improvements. Removed read interval and related
    methods, i.e. incoming data is now read immediately.
  - PositionProvider may now use VTG sentence to acquire needed values.